Fix overflow

--- a/src/sass/loader.sass
+++ b/src/sass/loader.sass
@@ -415,11 +415,12 @@ body #box
   position: absolute
   top: 0
   left: 0
+  display: block
   transition: 0.4s top cubic-bezier(0.7,0.3,0,1), 0.4s height cubic-bezier(0.7,0.3,0,1)
 
 #events.inactive
   top: 100%
-  height: 0
+  display: none
 
 #abouttext
   color: #ffffff
